--- a/_posts/2014-02-04-release.md
+++ b/_posts/2014-02-04-release.md
@@ -4,7 +4,7 @@ layout: post
 title:  "releases/2014-02-04"
 date:   2014-02-04
 categories: release
-image: '/anatomy/images/u-logo.jpg'
+image: '/images/u-logo.jpg'
 tags:
  - release
 ---
