--- a/_posts/2014-02-28-release.md
+++ b/_posts/2014-02-28-release.md
@@ -5,7 +5,7 @@ title:  "releases/2014-02-28"
 summary: "Addition of multiple taxon constraints, invertebrate circulatory system additions, multiple skeletal system additions for Phenoscape"
 date:   2014-02-28
 categories: release
-image: '/anatomy/images/u-logo.jpg'
+image: '/images/u-logo.jpg'
 tags:
  - release
 ---
