--- a/_posts/2014-02-28-welcome.md
+++ b/_posts/2014-02-28-welcome.md
@@ -4,7 +4,7 @@ title:  "Welcome to our new website"
 summary: "We're still ironing out a few kinks, please bear with us..."
 date:   2014-02-28
 categories: update
-image: '/anatomy/images/u-logo.jpg'
+image: '/images/u-logo.jpg'
 tags:
  - announce
 ---
@@ -18,9 +18,9 @@ Some useful links:
 
  * [Old website](http://www.obofoundry.org/wiki/index.php/UBERON:Main_Page) - content still being moved
  * [Uberon wiki](https://github.com/obophenotype/uberon/wiki/Manual) - we hope to have better integration between website and the wiki in future
- * [Overview](/anatomy/about.html) - project overview
- * [Adopters](/anatomy/about/adopters.html) - friends of Uberon
- * [Downloads](/anatomy/downloads.html) - Download the ontology
+ * [Overview](/about.html) - project overview
+ * [Adopters](/about/adopters.html) - friends of Uberon
+ * [Downloads](/downloads.html) - Download the ontology
 
 We've also added a search bar, courtesy of OntoBee, together with
 different browsing options, available from the top menu bar.
