--- a/_posts/2014-03-03-release.md
+++ b/_posts/2014-03-03-release.md
@@ -5,7 +5,7 @@ title:  "releases/2014-03-03"
 date:   2014-03-03
 summary: "Minor release"
 categories: release
-image: '/anatomy/images/u-logo.jpg'
+image: '/images/u-logo.jpg'
 tags:
  - release
 ---
