--- a/_posts/2014-05-22-release.md
+++ b/_posts/2014-05-22-release.md
@@ -5,7 +5,7 @@ title: "/releases/2014-05-22/uberon.owl"
 date: 2014-05-22
 summary: "Various new terms from Phenoscape, including tooth types and ridges"
 categories: release
-image: 'https://upload.wikimedia.org/wikipedia/en/a/ab/Teeth_diagram.png"
+image: 'https://upload.wikimedia.org/wikipedia/en/a/ab/Teeth_diagram.png'
 tags:
  - release
 ---
