--- a/_posts/2014-05-24-release.md
+++ b/_posts/2014-05-24-release.md
@@ -5,7 +5,7 @@ title: "/releases/2014-05-24/uberon.owl"
 date: 2014-05-24
 summary: "Reproductive system improvements - more terms for unusual cartilaginous fish and reptile intromittent organs, mammary glands now consistent with GO. Various new terms added for character matrix annotation in phenoscape"
 categories: release
-image: '/anatomy/images/u-logo.jpg'
+image: '/images/u-logo.jpg'
 tags:
  - release
 ---
