--- a/_posts/2014-05-27-release.md
+++ b/_posts/2014-05-27-release.md
@@ -5,7 +5,7 @@ title: "/releases/2014-05-27/uberon.owl"
 date: 2014-05-27
 summary: "odds and ends"
 categories: release
-image: '/anatomy/images/u-logo.jpg'
+image: '/images/u-logo.jpg'
 tags:
  - release
 ---
