--- a/_posts/2014-06-21-release.md
+++ b/_posts/2014-06-21-release.md
@@ -5,7 +5,7 @@ title: "/releases/2014-06-21/uberon.owl"
 date: 2014-06-21
 summary: "Various improvements to facial muscles and supporting skeletal structures from FEED project, plus assorted minor changes"
 categories: release
-image: '/anatomy/images/u-logo.jpg'
+image: '/images/u-logo.jpg'
 tags:
  - release
 ---
