--- a/_posts/2014-07-01-release.md
+++ b/_posts/2014-07-01-release.md
@@ -5,7 +5,7 @@ title: "/releases/2014-07-01/uberon.owl"
 date: 2014-07-01
 summary: "Release highlights include improved alignment with EMAPA and inclusion of all species-specific stage ontologies in the composite-metazoan release"
 categories: release
-image: '/anatomy/images/u-logo.jpg'
+image: '/images/u-logo.jpg'
 tags:
  - release
 ---
