--- a/_posts/2014-07-06-release.md
+++ b/_posts/2014-07-06-release.md
@@ -5,7 +5,7 @@ title: "/releases/2014-07-06/uberon.owl"
 date: 2014-07-06
 summary: "bug fix release"
 categories: release
-image: '/anatomy/images/u-logo.jpg'
+image: '/images/u-logo.jpg'
 tags:
  - release
 ---
