--- a/_posts/2014-07-15-release.md
+++ b/_posts/2014-07-15-release.md
@@ -5,7 +5,7 @@ title: "/releases/2014-07-15/uberon.owl"
 date: 2014-07-15
 summary: "Fixes for Phenoscape and BGee"
 categories: release
-image: '/anatomy/images/u-logo.jpg'
+image: '/images/u-logo.jpg'
 tags:
  - release
 ---
