--- a/_posts/2014-09-22-baleen.md
+++ b/_posts/2014-09-22-baleen.md
@@ -10,7 +10,7 @@ tags:
  - paper
 ---
 
-Melissa Haendel's presentation from Bio-Ontologies available
+Melissa Haendel's Keynote presentation from Bio-Ontologies available
 [on slidee](http://www.slideee.com/slide/from-baleen-to-cleft-palate-an-ontological-exploration-of-evolution-and-disease).
 
 
