--- a/_posts/2014-11-01-release.md
+++ b/_posts/2014-11-01-release.md
@@ -5,10 +5,13 @@ title: "/releases/2014-11-01/uberon.owl"
 date: 2014-11-01
 summary: "Integration of Allen Atlases for adult and developing mouse, human and non-human primate brains"
 categories: release
-image: '/anatomy/images/u-logo.jpg'
+image: 'https://upload.wikimedia.org/wikipedia/en/thumb/f/f6/Allen_Brain_Atlas.jpg/300px-Allen_Brain_Atlas.jpg'
 tags:
  - release
+ - neuro
 ---
+
+(Image taken from Wikipedia, [Allen Brain Atlas.jpg](https://en.wikipedia.org/wiki/File:Allen_Brain_Atlas.jpg) )
 
 This release sees the integration of the following ontologies (in addition to the existing adult mouse brain atlas, ABA):
 
@@ -36,18 +39,21 @@ This composite ontology includes Uberon with highly specific classes from the Al
 
 # Ontology Diff Report
 
- * neuroanatomy - issue #609
+ * neuroanatomy - 
+     * see [issue 609](https://github.com/obophenotype/uberon/issues/609)
      * Added xrefs for additional Allen ontologies: DHBA, HBA and DMBA
      * Note we retain prefix ABA (though MBA would be consistent with the above)
      * Also added xrefs for Nlx classes not in NIFSTD
      * This release comes with a new ontology, composite-brain.obo 
+ * Ext (Phenoscape)
+    * added internal carotid foramen, added anal fin radial skeleton (series), fix typo in def of supraacetabular buttress [PHENOSCAPE:wd]
  * Other
-     * NT: {upper,lower} eyelash. Fixes issue #606 HPO:sk
-     * added spatial disjoints: glands are never parts of the skeletal system - Fixes issue #607 and prevents further issues of this sort. HPO:sk
+     * NT: {upper,lower} eyelash. Fixes issue [issue 606](https://github.com/obophenotype/uberon/issues/606) HPO:sk
+     * added spatial disjoints: glands are never parts of the skeletal system - Fixes issue [issue 607](https://github.com/obophenotype/uberon/issues/607) and prevents further issues of this sort. HPO:sk
      * tidied up confusion between orbital regions and ocular regions - see notes below
-     * Fixed incorrect logical def. Fixes issue #602
-     * fixed typo. closes issue #605
-     * Fixed EMAPA stage/embryo xrefs. Fixes issue #601
+     * Fixed incorrect logical def. Fixes issue [issue 602](https://github.com/obophenotype/uberon/issues/602)
+     * fixed typo. closes issue [issue 605](https://github.com/obophenotype/uberon/issues/605)
+     * Fixed EMAPA stage/embryo xrefs. Fixes issue [issue 601](https://github.com/obophenotype/uberon/issues/601)
 
 ## orbital region changes
 
