--- a/_posts/2015-03-15-release.md
+++ b/_posts/2015-03-15-release.md
@@ -3,9 +3,9 @@ comments: true
 layout: post
 title: "2015-03-15 release"
 date: 2015-03-15
-summary: "Cephalopods, comb jellies, sponges oh my!"
+summary: "Cephalopods and comb jellies and sponges, oh my!"
 categories: release
-image: '/anatomy/images/u-logo.jpg'
+image: 'https://upload.wikimedia.org/wikipedia/commons/thumb/c/cc/Architeuthis_princeps_image_modified.PNG/250px-Architeuthis_princeps_image_modified.PNG'
 tags:
  - release
 ---
@@ -27,13 +27,13 @@ This release also incorporates a number of improvements from the Uberon communit
 # Ontology Diff Report
 
  * Composite Metazoa
-    * Added PORO: Fixes #658
+    * Added PORO: Fixes [658](https://github.com/obophenotype/uberon/issues/658)
     * Added CTENO
     * Added CEPH
  * Invertebrate and cyclostomes
-    * relabeled gut epithelium and added gastrodermis as a synonym. BGEE:ANN. Issue #578
-    * Fixed def of blastopore. BGEE:ANN. Fixes #660
-    * changed label for oral/aboral sides. Fixes #661
+    * relabeled gut epithelium and added gastrodermis as a synonym. BGEE:ANN. Issue [578](https://github.com/obophenotype/uberon/issues/578)
+    * Fixed def of blastopore. BGEE:ANN. Fixes [660](https://github.com/obophenotype/uberon/issues/660)
+    * changed label for oral/aboral sides. Fixes [661](https://github.com/obophenotype/uberon/issues/661)
     * Referencing BSPO in definition of spatial subdivisions
     * NT: Pharyngeal bar
     * NT: Mucocartilage tissue (as found in lampreys)
@@ -41,36 +41,36 @@ This release also incorporates a number of improvements from the Uberon communit
  * Upper
     * NTs: cell cluster, multi organ part structures. From CARO
     * organ component layer review: reclassified many layered structures and ensured most has their composition defined
-    * removed some axioms from bone tissue and added them to mineralized child. Issue #27
+    * removed some axioms from bone tissue and added them to mineralized child. Issue [27](https://github.com/obophenotype/uberon/issues/27)
     * CARO: replacing clusters with multi organ part structures
     * NT: external soft tissue zone
  * Neuro
     * Reviewing pan-vertebrate brain structures
-    * Brain taxon constraints. michaelerice. Issue #659
+    * Brain taxon constraints. michaelerice. Issue [659](https://github.com/obophenotype/uberon/issues/659)
     * alignment with MP: def and syns for infundibular stem
-    * Some fixes to neurilemma to address #646 - No longer grouping insect structure here (functional grouping would be at a higher level)
+    * Some fixes to neurilemma to address [646](https://github.com/obophenotype/uberon/issues/646) - No longer grouping insect structure here (functional grouping would be at a higher level)
  * Glands and integumentary system
     * alignment with MP: mucuous glands. https://sourceforge.net/p/obo/mammalian-phenotype-requests/2036/
     * NT: Weber gland. parts of ciliary body. https://sourceforge.net/p/obo/mammalian-phenotype-requests/2035/
     * def-of-suprabasal
  * Circulatory and duct systems
-    * Taxon constraint on retina vasculature (and hence all blood vessels) for Aves. Fixes #657
+    * Taxon constraint on retina vasculature (and hence all blood vessels) for Aves. Fixes [657](https://github.com/obophenotype/uberon/issues/657)
     * various edits, incl elastic layers and blood vessel layers
     * fixed confusion between arcuate veins
-    * Multiple improvements to representation of biliary system. Related to issue #653
-    * NT: biliary tree epithelium. Fixes #653
+    * Multiple improvements to representation of biliary system. Related to issue [653](https://github.com/obophenotype/uberon/issues/653)
+    * NT: biliary tree epithelium. Fixes [653](https://github.com/obophenotype/uberon/issues/653)
     * Improved definitions of biliary structures using MP and sources provided by @cindyJax
  * Other
-    * TCs for peyers patch [michael e rice]. Issue #647
+    * TCs for peyers patch [michael e rice]. Issue [647](https://github.com/obophenotype/uberon/issues/647)
     * Fixing mouse-derived incorrect placement of bronchus BM, omitting from checks until https://sourceforge.net/p/obo/mouse-anatomy-requests/94/
     * Fixed Bruch's membrane
-    * Fixed sp. errors. Fixes #585
-    * Fixed def typo. Fixes #520
+    * Fixed sp. errors. Fixes [585](https://github.com/obophenotype/uberon/issues/585)
+    * Fixed def typo. Fixes [520](https://github.com/obophenotype/uberon/issues/520)
  * Stages and development
-    * NT: juvenile stage. Fixes #645
-    * NT: infant stage. Fixes #644
-    * Taxon constraints for nursing stage. Issue #576
-    * pituitary now immediate transform of future pituitary. Issue #438
+    * NT: juvenile stage. Fixes [645](https://github.com/obophenotype/uberon/issues/645)
+    * NT: infant stage. Fixes [644](https://github.com/obophenotype/uberon/issues/644)
+    * Taxon constraints for nursing stage. Issue [576](https://github.com/obophenotype/uberon/issues/576)
+    * pituitary now immediate transform of future pituitary. Issue [438](https://github.com/obophenotype/uberon/issues/438)
 
 
 ## Original Ontology
