--- a/_posts/2015-05-25-release.md
+++ b/_posts/2015-05-25-release.md
@@ -13,11 +13,11 @@ tags:
 This release incorporates a first pass at organism subdivisions for
 the acorn worm (enteropneust). We would like to bud this off into an
 external ontology that is federated with the core Uberon. For more
-information, see #692
+information, see [692](https://github.com/obophenotype/uberon/issues/692)
 
 We also clarified the distinctinction between trigeminal and profundal
 placodes and the structures they give rise to. For more information,
-see #693, and the following diagram:
+see [693](https://github.com/obophenotype/uberon/issues/693), and the following diagram:
 
 ![trigeminal](https://raw.githubusercontent.com/obophenotype/uberon/master/docs/trigeminal.png)
 
@@ -26,18 +26,18 @@ see #693, and the following diagram:
 # Ontology Diff Report
 
  * invertebrate biology
-    * crude first pass at enteropneust subdivisions, plus collar nerve cord. Fixes #692 @ANiknejad
+    * crude first pass at enteropneust subdivisions, plus collar nerve cord. Fixes [692](https://github.com/obophenotype/uberon/issues/692) @ANiknejad
  * muscle
     * Redefining some musculature classes in terms of attachments.
-    * added note to suprahyoid. #697 @RDruzinsky
-    * merging 'skeletal muscle of tongue' into 'tongue muscle' as all tongue muscles are skeletal (@RDruzinsky). #331
+    * added note to suprahyoid. [697](https://github.com/obophenotype/uberon/issues/697) @RDruzinsky
+    * merging 'skeletal muscle of tongue' into 'tongue muscle' as all tongue muscles are skeletal (@RDruzinsky). [331](https://github.com/obophenotype/uberon/issues/331)
     * obsoleting tongue musculature (trivially paralleled 'tongue muscle')
  * neuro
     * NTs for pretectal nuclei 
-    * Added logical def for habenular nucleus; will now auto-classify the two ZFA classes. Issue #542 @ANiknejad
+    * Added logical def for habenular nucleus; will now auto-classify the two ZFA classes. Issue [542](https://github.com/obophenotype/uberon/issues/542) @ANiknejad
     * more logical defs for neuro structures
  * placodes
-    * Syns and develops from for profundal and trigeminal placodes, nerves etc. Issue #693 @ANiknejad @mellybelly
+    * Syns and develops from for profundal and trigeminal placodes, nerves etc. Issue [693](https://github.com/obophenotype/uberon/issues/693) @ANiknejad @mellybelly
     * obsoleting AEO-derived epithelial placode and merging with ectodermal placode
     * adding df to pre-placodal ectoderm for all neurogenic placodes
  * urogenital
@@ -48,17 +48,17 @@ see #693, and the following diagram:
     * carapace plate syns
     * added definitions for ribs, clarifying that homology of serial elements not implied
  * vasculature
-    * adding grouping chamber classes for lateral sides. Not quite equivalent to the xreffed FMA class. Fixes #674 @drseb
-    * Added design pattern for deep and superficial vasculature. Fixes #680 @drseb
+    * adding grouping chamber classes for lateral sides. Not quite equivalent to the xreffed FMA class. Fixes [674](https://github.com/obophenotype/uberon/issues/674) @drseb
+    * Added design pattern for deep and superficial vasculature. Fixes [680](https://github.com/obophenotype/uberon/issues/680) @drseb
     * veins, lymph nodes, TCs, some brain logical defs
  * bridging axioms
-    * Moved some constraints into pending axioms, to avoid incoherent combined ontologies. Fixes #694 @balhoff
+    * Moved some constraints into pending axioms, to avoid incoherent combined ontologies. Fixes [694](https://github.com/obophenotype/uberon/issues/694) @balhoff
     * fixing non 1:1 emapa xrefs, thanks for @tfhayamizu for clarifications
-    * Fixed some FMA xrefs. Issue #683 @drseb
+    * Fixed some FMA xrefs. Issue [683](https://github.com/obophenotype/uberon/issues/683) @drseb
     * fixed wikipedia depiction images; we always now use the full image, not a thumb
     * Added more Wikipedia xrefs
  * Other
-    * removing nasty hidden non-ascii characters in def of nerve cord and others from PMID:21062451. Issue #691 @ANiknejad
+    * removing nasty hidden non-ascii characters in def of nerve cord and others from PMID:21062451. Issue [691](https://github.com/obophenotype/uberon/issues/691) @ANiknejad
     * Ensuring all defs have at least one source
     * Auto-added some placeholder defs from Wikipedia
 
