--- a/_posts/2015-05-25-release.md
+++ b/_posts/2015-05-25-release.md
@@ -1,11 +1,11 @@
 ---
 comments: true
 layout: post
-title: "/releases/2015-05-25/uberon.owl"
+title: "2015-05-25 release"
 date: 2015-05-25
 summary: "Multiple improvements to multiple systems, highlights including enteropneust subdivisions and representation of trigeminal placodes"
 categories: release
-image: 'https://raw.githubusercontent.com/obophenotype/uberon/master/docs/trigeminal.png'
+image: 'http://upload.wikimedia.org/wikipedia/commons/7/72/Eichelwurm.jpg'
 tags:
  - release
 ---
@@ -21,44 +21,44 @@ see [693](https://github.com/obophenotype/uberon/issues/693), and the following 
 
 ![trigeminal](https://raw.githubusercontent.com/obophenotype/uberon/master/docs/trigeminal.png)
 
-@cmungall
+[cmungall](https://github.com/cmungall)
 
 # Ontology Diff Report
 
  * invertebrate biology
-    * crude first pass at enteropneust subdivisions, plus collar nerve cord. Fixes [692](https://github.com/obophenotype/uberon/issues/692) @ANiknejad
+    * crude first pass at enteropneust subdivisions, plus collar nerve cord. Fixes [692](https://github.com/obophenotype/uberon/issues/692) [ANiknejad](https://github.com/ANiknejad)
  * muscle
     * Redefining some musculature classes in terms of attachments.
-    * added note to suprahyoid. [697](https://github.com/obophenotype/uberon/issues/697) @RDruzinsky
-    * merging 'skeletal muscle of tongue' into 'tongue muscle' as all tongue muscles are skeletal (@RDruzinsky). [331](https://github.com/obophenotype/uberon/issues/331)
+    * added note to suprahyoid. [697](https://github.com/obophenotype/uberon/issues/697) [RDruzinsky](https://github.com/RDruzinsky)
+    * merging 'skeletal muscle of tongue' into 'tongue muscle' as all tongue muscles are skeletal ([RDruzinsky](https://github.com/RDruzinsky)). [331](https://github.com/obophenotype/uberon/issues/331)
     * obsoleting tongue musculature (trivially paralleled 'tongue muscle')
  * neuro
     * NTs for pretectal nuclei 
-    * Added logical def for habenular nucleus; will now auto-classify the two ZFA classes. Issue [542](https://github.com/obophenotype/uberon/issues/542) @ANiknejad
+    * Added logical def for habenular nucleus; will now auto-classify the two ZFA classes. Issue [542](https://github.com/obophenotype/uberon/issues/542) [ANiknejad](https://github.com/ANiknejad)
     * more logical defs for neuro structures
  * placodes
-    * Syns and develops from for profundal and trigeminal placodes, nerves etc. Issue [693](https://github.com/obophenotype/uberon/issues/693) @ANiknejad @mellybelly
+    * Syns and develops from for profundal and trigeminal placodes, nerves etc. Issue [693](https://github.com/obophenotype/uberon/issues/693) [ANiknejad](https://github.com/ANiknejad) [mellybelly](https://github.com/mellybelly)
     * obsoleting AEO-derived epithelial placode and merging with ectodermal placode
     * adding df to pre-placodal ectoderm for all neurogenic placodes
  * urogenital
     * gonadal/genital ridge fixes
  * comparative biology
-    * adding taxon comments to otolith courtesy of @SomeCallMeDave
+    * adding taxon comments to otolith courtesy of [SomeCallMeDave](https://github.com/SomeCallMeDave)
  * skeletal
     * carapace plate syns
     * added definitions for ribs, clarifying that homology of serial elements not implied
  * vasculature
-    * adding grouping chamber classes for lateral sides. Not quite equivalent to the xreffed FMA class. Fixes [674](https://github.com/obophenotype/uberon/issues/674) @drseb
-    * Added design pattern for deep and superficial vasculature. Fixes [680](https://github.com/obophenotype/uberon/issues/680) @drseb
+    * adding grouping chamber classes for lateral sides. Not quite equivalent to the xreffed FMA class. Fixes [674](https://github.com/obophenotype/uberon/issues/674) [drseb](https://github.com/drseb)
+    * Added design pattern for deep and superficial vasculature. Fixes [680](https://github.com/obophenotype/uberon/issues/680) [drseb](https://github.com/drseb)
     * veins, lymph nodes, TCs, some brain logical defs
  * bridging axioms
-    * Moved some constraints into pending axioms, to avoid incoherent combined ontologies. Fixes [694](https://github.com/obophenotype/uberon/issues/694) @balhoff
-    * fixing non 1:1 emapa xrefs, thanks for @tfhayamizu for clarifications
-    * Fixed some FMA xrefs. Issue [683](https://github.com/obophenotype/uberon/issues/683) @drseb
+    * Moved some constraints into pending axioms, to avoid incoherent combined ontologies. Fixes [694](https://github.com/obophenotype/uberon/issues/694) [balhoff](https://github.com/balhoff)
+    * fixing non 1:1 emapa xrefs, thanks for [tfhayamizu](https://github.com/tfhayamizu) for clarifications
+    * Fixed some FMA xrefs. Issue [683](https://github.com/obophenotype/uberon/issues/683) [drseb](https://github.com/drseb)
     * fixed wikipedia depiction images; we always now use the full image, not a thumb
     * Added more Wikipedia xrefs
  * Other
-    * removing nasty hidden non-ascii characters in def of nerve cord and others from PMID:21062451. Issue [691](https://github.com/obophenotype/uberon/issues/691) @ANiknejad
+    * removing nasty hidden non-ascii characters in def of nerve cord and others from PMID:21062451. Issue [691](https://github.com/obophenotype/uberon/issues/691) [ANiknejad](https://github.com/ANiknejad)
     * Ensuring all defs have at least one source
     * Auto-added some placeholder defs from Wikipedia
 
