--- a/_posts/2014-04-30-release.md
+++ b/_posts/2014-04-30-release.md
@@ -1,7 +1,7 @@
 ---
 comments: true
 layout: post
-title: "/releases/2014-04-30/uberon.owl"
+title: "2014-04-30 release"
 date: 2014-04-30
 summary: "Bug fix release"
 categories: release
