--- a/_posts/2014-05-22-release.md
+++ b/_posts/2014-05-22-release.md
@@ -1,7 +1,7 @@
 ---
 comments: true
 layout: post
-title: "/releases/2014-05-22/uberon.owl"
+title: "2014-05-22 release"
 date: 2014-05-22
 summary: "Various new terms from Phenoscape, including tooth types and ridges"
 categories: release
