--- a/_posts/2014-05-24-release.md
+++ b/_posts/2014-05-24-release.md
@@ -1,7 +1,7 @@
 ---
 comments: true
 layout: post
-title: "/releases/2014-05-24/uberon.owl"
+title: "2014-05-24 release"
 date: 2014-05-24
 summary: "Reproductive system improvements - more terms for unusual cartilaginous fish and reptile intromittent organs, mammary glands now consistent with GO. Various new terms added for character matrix annotation in phenoscape"
 categories: release
