--- a/_posts/2014-05-27-release.md
+++ b/_posts/2014-05-27-release.md
@@ -1,7 +1,7 @@
 ---
 comments: true
 layout: post
-title: "/releases/2014-05-27/uberon.owl"
+title: "2014-05-27 release"
 date: 2014-05-27
 summary: "odds and ends"
 categories: release
