--- a/_posts/2014-06-21-release.md
+++ b/_posts/2014-06-21-release.md
@@ -1,7 +1,7 @@
 ---
 comments: true
 layout: post
-title: "/releases/2014-06-21/uberon.owl"
+title: "2014-06-21 release"
 date: 2014-06-21
 summary: "Various improvements to facial muscles and supporting skeletal structures from FEED project, plus assorted minor changes"
 categories: release
