--- a/_posts/2014-07-06-release.md
+++ b/_posts/2014-07-06-release.md
@@ -1,7 +1,7 @@
 ---
 comments: true
 layout: post
-title: "/releases/2014-07-06/uberon.owl"
+title: "2014-07-06 release"
 date: 2014-07-06
 summary: "bug fix release"
 categories: release
