--- a/_posts/2014-07-15-release.md
+++ b/_posts/2014-07-15-release.md
@@ -1,7 +1,7 @@
 ---
 comments: true
 layout: post
-title: "/releases/2014-07-15/uberon.owl"
+title: "2014-07-15 release"
 date: 2014-07-15
 summary: "Fixes for Phenoscape and BGee"
 categories: release
