--- a/_posts/2014-07-31-release.md
+++ b/_posts/2014-07-31-release.md
@@ -1,7 +1,7 @@
 ---
 comments: true
 layout: post
-title: "/releases/2014-07-31/uberon.owl"
+title: "2014-07-31 release"
 date: 2014-07-31
 summary: "Multiple improvements to muscles courtesy of FEED project"
 categories: release
