--- a/_posts/2014-08-21-release.md
+++ b/_posts/2014-08-21-release.md
@@ -1,7 +1,7 @@
 ---
 comments: true
 layout: post
-title: "/releases/2014-08-21/uberon.owl"
+title: "2014-08-21 release"
 date: 2014-08-21
 summary: "Adding more grouping classes for teeth, according to criteria such as tooth type, upper vs lower, position within group, primary vs secondary"
 categories: release
