--- a/_posts/2014-10-26-release.md
+++ b/_posts/2014-10-26-release.md
@@ -1,7 +1,7 @@
 ---
 comments: true
 layout: post
-title: "/releases/2014-10-26/uberon.owl"
+title: "2014-10-26 release"
 date: 2014-10-26
 summary: "Random stuff"
 categories: release
