--- a/_posts/2014-11-01-release.md
+++ b/_posts/2014-11-01-release.md
@@ -1,7 +1,7 @@
 ---
 comments: true
 layout: post
-title: "/releases/2014-11-01/uberon.owl"
+title: "2014-11-01 release"
 date: 2014-11-01
 summary: "Integration of Allen Atlases for adult and developing mouse, human and non-human primate brains"
 categories: release
