--- a/_posts/2014-07-01-release.md
+++ b/_posts/2014-07-01-release.md
@@ -1,7 +1,7 @@
 ---
 comments: true
 layout: post
-title: "/releases/2014-07-01/uberon.owl"
+title: "2014-07-01 release"
 date: 2014-07-01
 summary: "Release highlights include improved alignment with EMAPA and inclusion of all species-specific stage ontologies in the composite-metazoan release"
 categories: release
