--- a/_posts/2015-06-22-release.md
+++ b/_posts/2015-06-22-release.md
@@ -5,7 +5,7 @@ title: "2015-06-22 release"
 date: 2015-06-22
 summary: "This version is primarily a maintenance release, with some improvements to the skeletal system and a new term for the newly discovered nervous system lymph vasculature"
 categories: release
-image: '/anatomy/images/u-logo.jpg'
+image: 'https://upload.wikimedia.org/wikipedia/commons/thumb/3/33/TMI_cleanup-2.jpg/360px-TMI_cleanup-2.jpg'
 tags:
  - release
 ---
@@ -13,33 +13,33 @@ tags:
 
  * circulatory/neuro
     * Added new class for lymph vessel of dura mater; see http://dx.doi.org/10.1038/nature14432
-    * made ganglion a cell cluster organ rather than cell cluster. #702
+    * made ganglion a cell cluster organ rather than cell cluster. [702](https://github.com/obophenotype/uberon/issues/702)
  * xrefs and lexical properties
-    * replaced multiple MESH tree numbers with IDs. #698. Thanks @dhimmel
+    * replaced multiple MESH tree numbers with IDs. [698](https://github.com/obophenotype/uberon/issues/698). Thanks [dhimmel](https://github.com/dhimmel)
     * Migrated mouse anatomy tracker from sourceforge to github and rerouted tickets
     * Added multiple github tickets URLs to relevant terms
-    * Changed FBbt xref for proctodeum. Fixes #685. Thanks @mmc64 @dosumis @ANiknejad
+    * Changed FBbt xref for proctodeum. Fixes [685](https://github.com/obophenotype/uberon/issues/685). Thanks [mmc64](https://github.com/mmc64) [dosumis](https://github.com/dosumis) [ANiknejad](https://github.com/ANiknejad)
     * fixed formatting of def xrefs; previously in the obo these were not correctly separated leading to problems with the OWL axiom annotations
     * FEED xrefs
  * skeletal and body parts
     * nose job:
        * turbinal improvements based on PMID:25312359
        * what was called "olfactory appartus" is now simply "nose"
-    * pelvic region part of pelvis. Fixes #706
-    * Linked bony and skeletal element projections. Fixes #107
-    * procoracoid def. Fixes #104
-    * lunate->intermedium. fixes #113
-    * scaphoid->radiale. fixes #112
-    * added has_quality to spine appendage. #700
-    * added spine as syn from projection. #700
+    * pelvic region part of pelvis. Fixes [706](https://github.com/obophenotype/uberon/issues/706)
+    * Linked bony and skeletal element projections. Fixes [107](https://github.com/obophenotype/uberon/issues/107)
+    * procoracoid def. Fixes [104](https://github.com/obophenotype/uberon/issues/104)
+    * lunate->intermedium. fixes [113](https://github.com/obophenotype/uberon/issues/113)
+    * scaphoid->radiale. fixes [112](https://github.com/obophenotype/uberon/issues/112)
+    * added has_quality to spine appendage. [700](https://github.com/obophenotype/uberon/issues/700)
+    * added spine as syn from projection. [700](https://github.com/obophenotype/uberon/issues/700)
  * Integument
-    * hairy stuff. taxon constraint for wool, issue #703
+    * hairy stuff. taxon constraint for wool, issue [703](https://github.com/obophenotype/uberon/issues/703)
     * improvements to hair and feathers
     * NT: [outer root sheath companion layer](http://purl.obolibrary.org/obo/UBERON_0035609)
  * Constraints and axiomatization
     * Added multiple axioms following the DisjointUnionOver pattern aka JEPD mereological sums.
     * disjoint_union_over; feathers; fixing over-zealous constraint; there are some structures like tendons that are both part of the skeletal system (not skeleton) and muscle system
-    * TCs for lung. Issue #701
+    * TCs for lung. Issue [701](https://github.com/obophenotype/uberon/issues/701)
 
 # Ontology Diff Report
 
