--- a/_posts/2015-07-24-release.md
+++ b/_posts/2015-07-24-release.md
@@ -19,22 +19,22 @@ tags:
     * Improvements to veins and arteries
     * Added explicit classification in superficial and deep veins
     * vesical arteries
-    * NTR: paraumbilical vein. Fixes #1134
+    * NTR: paraumbilical vein. Fixes [1134](https://github.com/obophenotype/uberon/issues/1134)
  * images
-    * multiple wikipedia images were 404 - see issue #720, @drseb
+    * multiple wikipedia images were 404 - see issue [720](https://github.com/obophenotype/uberon/issues/720), [drseb](https://github.com/drseb)
     * these have been removed and in many cases new images manually selected
  * Taxon constraints and evolution
     * tagged homology grouping classes
-    * New taxon constraints, emphasis on human subset. Issue #703
-    * Added wing taxon constraints. Issue #721
+    * New taxon constraints, emphasis on human subset. Issue [703](https://github.com/obophenotype/uberon/issues/703)
+    * Added wing taxon constraints. Issue [721](https://github.com/obophenotype/uberon/issues/721)
  * Misc.
     * obsoleting NMJ (replaced_by the equivalent GO class)
-    * placed reproductive structure in grouping_class anti-slim. Issue #1133
-    * fixed synonym case. #720 - Changed label of pelvis to 'pelvic region of trunk', this better communicates the fact this is not the bony parts
-    * NTR: ocular region. Added [mereological sum axioms](https://github.com/obophenotype/uberon/wiki/Part-disjointness-Design-Pattern). Fixes #1132
+    * placed reproductive structure in grouping_class anti-slim. Issue [1133](https://github.com/obophenotype/uberon/issues/1133)
+    * fixed synonym case. [720](https://github.com/obophenotype/uberon/issues/720) - Changed label of pelvis to 'pelvic region of trunk', this better communicates the fact this is not the bony parts
+    * NTR: ocular region. Added [mereological sum axioms](https://github.com/obophenotype/uberon/wiki/Part-disjointness-Design-Pattern). Fixes [1132](https://github.com/obophenotype/uberon/issues/1132)
     * axiomatizing breast quadrants
-    * NTs: pharyngeal spaces. MGI:cs. Fixes #1131
-    * relabeled cervical segments. Added prelim defs. Issue #725
+    * NTs: pharyngeal spaces. MGI:cs. Fixes [1131](https://github.com/obophenotype/uberon/issues/1131)
+    * relabeled cervical segments. Added prelim defs. Issue [725](https://github.com/obophenotype/uberon/issues/725)
 
 ## Original Ontology
 
