--- a/_posts/2015-07-24-release.md
+++ b/_posts/2015-07-24-release.md
@@ -3,7 +3,7 @@ comments: true
 layout: post
 title: "2015-07-24 release"
 date: 2015-07-24
-summary: "Improvements to branchy structures (nerves and vasculature), Broken image links have been fixed"
+summary: "Improvements to branchy structures (nerves and vasculature), overhaul of image URLs"
 categories: release
 image: 'https://upload.wikimedia.org/wikipedia/commons/thumb/3/37/Eye_nerves_diagram.svg/460px-Eye_nerves_diagram.svg.png'
 tags:
