--- a/_posts/2015-08-11-release.md
+++ b/_posts/2015-08-11-release.md
@@ -20,7 +20,7 @@ tags:
     * aligned with FMA 4.0.1 - this version of FMA has many more embryonic structures
     * Generalized classes from EHDAA2: embryonic capillary plexus, yolk sac cavities
  * Other
-    * NT: submandibular region. Issue #1137
+    * NT: submandibular region. Issue [1137](https://github.com/obophenotype/uberon/issues/1137)
     * added logical definition for endothelium 
     
 ~
