--- a/_posts/2015-09-27-release.md
+++ b/_posts/2015-09-27-release.md
@@ -3,47 +3,49 @@ comments: true
 layout: post
 title: "2015-09-27 release"
 date: 2015-09-27
-summary: "Improved alignment to NCI thesaurus"
+summary: "Improved alignment to NCI thesaurus, and addition of HVC nucleus of the song learning pathway of Passeriformes"
 categories: release
-image: 'https://wiki.nci.nih.gov/download/attachments/12686034/NCIThesaurusLogo.jpg'
+image: 'https://upload.wikimedia.org/wikipedia/commons/thumb/5/55/Protonotaria-citrea-002_edit.jpg/240px-Protonotaria-citrea-002_edit.jpg'
 tags:
  - release
 ---
 
 This release sees improved alignment to NCI thesaurus. Note the URLs
 for NCI cross-references have changed from the deprecated
-symbolic-name style to use of numeric fragments. See #1149 for details.
+symbolic-name style to use of numeric fragments. See [1149](https://github.com/obophenotype/uberon/issues/1149) for details.
 
 Additionally this release incorporates multiple additional
 relationships and new terms in various anatomical systems,
 particularly the nervous system.
 
+![song-learning pathway](https://upload.wikimedia.org/wikipedia/commons/thumb/c/c8/Birdbrain.svg/360px-Birdbrain.svg.png)
+
 # Ontology Diff Report
 
  * xrefs
-    * Adding expansion for NCIT. #1149
-    * Adding missing NCIt xrefs. #1149
-    * xref fixes from @CatherineLeroy #1150
-    * Switch to using meaning-free numeric NCIT IDs. Confirmed with Gilberto that this is correct. Fixes #1149
+    * Adding expansion for NCIT. [1149](https://github.com/obophenotype/uberon/issues/1149)
+    * Adding missing NCIt xrefs. [1149](https://github.com/obophenotype/uberon/issues/1149)
+    * xref fixes from [CatherineLeroy](https://github.com/CatherineLeroy) [1150](https://github.com/obophenotype/uberon/issues/1150)
+    * Switch to using meaning-free numeric NCIT IDs. Confirmed with Gilberto that this is correct. Fixes [1149](https://github.com/obophenotype/uberon/issues/1149)
  * musculoskeletal and connective tissue
-    * Adding stroma syn to mammary connective tissue. Fixes #1151
-    * added explicit skeletal muscle classification. #1154
-    * made all quadriceps femoris (including vastus lateralis) skeletal, Fixes #1152
-    * relabeled ocular region to orbital region #1132
+    * Adding stroma syn to mammary connective tissue. Fixes [1151](https://github.com/obophenotype/uberon/issues/1151)
+    * added explicit skeletal muscle classification. [1154](https://github.com/obophenotype/uberon/issues/1154)
+    * made all quadriceps femoris (including vastus lateralis) skeletal, Fixes [1152](https://github.com/obophenotype/uberon/issues/1152)
+    * relabeled ocular region to orbital region [1132](https://github.com/obophenotype/uberon/issues/1132)
  * neuro
     * Additional work on hippocampus layers, see https://github.com/obophenotype/mammalian-phenotype-ontology/issues/2110
     * brain mods
-    * made S1 part_of parietal cortex (more specific than lobe). Issue #1147
+    * made S1 part_of parietal cortex (more specific than lobe). Issue [1147](https://github.com/obophenotype/uberon/issues/1147)
     * NT: HVC (Aves). Fixes https://github.com/geneontology/go-ontology/issues/12057
     * NTs for grouping layers and fields of hippocampus
  * other
-    * urinary bladder never in Aves. Fixes #454
+    * urinary bladder never in Aves. Fixes [454](https://github.com/obophenotype/uberon/issues/454)
     * merging adrenal into suprarenal. https://github.com/obophenotype/mouse-anatomy-ontology/issues/110
     * Adding syns for outer limiting membrane pending https://github.com/obophenotype/mammalian-phenotype-ontology/issues/2109#issuecomment-141523542
     * NT: seminal clot.
     * Adding notes to mandibular lymph nodes, consider merging mandibular and submandibular
-    * made all medial and laterals disjoint. Should prevent any future occurrences of errors such as in #1138
-    * Fixed relationship for medial pterygoid that was causing incorrect classification. Fixes #1138
+    * made all medial and laterals disjoint. Should prevent any future occurrences of errors such as in [1138](https://github.com/obophenotype/uberon/issues/1138)
+    * Fixed relationship for medial pterygoid that was causing incorrect classification. Fixes [1138](https://github.com/obophenotype/uberon/issues/1138)
     * ciliary nerves, ganglia; submandibular regions
 
 
