--- a/_posts/2015-11-19-release.md
+++ b/_posts/2015-11-19-release.md
@@ -16,66 +16,66 @@ tags:
     * Obsoleting dubious concept of cavity-lining in favor of serous membrane. 
     * Obsoleting dubious concept of body-cavity-or-lining in favor of serous sac.
     * Using luminal_space_of pattern for cavities
-    * Refactoring cavities and linings to conform to a standard design pattern, and clearing up many confusions. Fixes #86
+    * Refactoring cavities and linings to conform to a standard design pattern, and clearing up many confusions. Fixes [86](https://github.com/obophenotype/uberon/issues/86)
     * fixed pericardial fat syn clash; diaphragm, muscle and future brain fixes
-    * peritoneum xrefs for mouse, issue #86. 
+    * peritoneum xrefs for mouse, issue [86](https://github.com/obophenotype/uberon/issues/86). 
     * obsoleting: body membrane (NIFSTD)
     * NT: serous cavity
     * NT: visceral fat
     * NT: pericardial fat
-    * Fixing unsatisfiable classes due to peritoneum vs peritoneal sac issues. Related to #86
-    * Pericardium re-classified as multi-tissue. Fixes #1186
+    * Fixing unsatisfiable classes due to peritoneum vs peritoneal sac issues. Related to [86](https://github.com/obophenotype/uberon/issues/86)
+    * Pericardium re-classified as multi-tissue. Fixes [1186](https://github.com/obophenotype/uberon/issues/1186)
     * Ventral body cavity: now JEPD pattern for thoracic/abdominopelvic
     * Coelem fixes
     * Improved pleural cavities
  * neuro
-    * added Area X and robust nucleus (songbirds). Fixes #12142
-    * BA9 part of DLPFC. Fixes #1163
-    * BA24 part of ACC. Fixes #1161
-    * Removing inconsistent axioms for EW nucleus. #1160 and #1159
-    * VT nucleus not part of VT area. See #1159
+    * added Area X and robust nucleus (songbirds). Fixes [12142](https://github.com/obophenotype/uberon/issues/12142)
+    * BA9 part of DLPFC. Fixes [1163](https://github.com/obophenotype/uberon/issues/1163)
+    * BA24 part of ACC. Fixes [1161](https://github.com/obophenotype/uberon/issues/1161)
+    * Removing inconsistent axioms for EW nucleus. [1160](https://github.com/obophenotype/uberon/issues/1160) and [1159](https://github.com/obophenotype/uberon/issues/1159)
+    * VT nucleus not part of VT area. See [1159](https://github.com/obophenotype/uberon/issues/1159)
     * Additional work on hippocampus layers
-    * made S1 part_of parietal cortex (more specific than lobe). Issue #1147
+    * made S1 part_of parietal cortex (more specific than lobe). Issue [1147](https://github.com/obophenotype/uberon/issues/1147)
  * musculoskeletal
-    * #1165 updated label on circulus and removed period from label on humeral facet on the ulna
+    * [1165](https://github.com/obophenotype/uberon/issues/1165) updated label on circulus and removed period from label on humeral facet on the ulna
     * added sharpey's fiber, procurrent spur, pectoral splint
     * added gill membrane, pelvic intercleithral cartilage, nasal accessory organ
-    * classifying multiple muscle organs as skeletal. #1154
-    * merging hamstring and posterior compartment thihg muscle. Adding classification to skeletal muscle #1154
-    * made rib skeletal system part of postcranial skeletal system, Fixes #1167
-    * Bone of reproductive structure --> Bone of reproductive organ. Fixes #1158
-    * added explicit skeletal muscle classification. #1154
-    * made all quadriceps femoris (including vastus lateralis) skeletal, Fixes #1152
+    * classifying multiple muscle organs as skeletal. [1154](https://github.com/obophenotype/uberon/issues/1154)
+    * merging hamstring and posterior compartment thihg muscle. Adding classification to skeletal muscle [1154](https://github.com/obophenotype/uberon/issues/1154)
+    * made rib skeletal system part of postcranial skeletal system, Fixes [1167](https://github.com/obophenotype/uberon/issues/1167)
+    * Bone of reproductive structure --> Bone of reproductive organ. Fixes [1158](https://github.com/obophenotype/uberon/issues/1158)
+    * added explicit skeletal muscle classification. [1154](https://github.com/obophenotype/uberon/issues/1154)
+    * made all quadriceps femoris (including vastus lateralis) skeletal, Fixes [1152](https://github.com/obophenotype/uberon/issues/1152)
     * classifying transversus
  * reasoning
     * Various resolutions to incoherencies revealed by reflexive part-of
     * Added taxon notes and taxon axioms for sallet and TM
-    * urinary bladder never in Aves. Fixes #454
+    * urinary bladder never in Aves. Fixes [454](https://github.com/obophenotype/uberon/issues/454)
  * dev
     * Some refactoring of early mouth: split into ectodermal and non-ectodermal components
-    * thymoids are in branchial basket region, but not part of. See #1159
+    * thymoids are in branchial basket region, but not part of. See [1159](https://github.com/obophenotype/uberon/issues/1159)
  * misc
     * NT: caval sphincter (Phocidae)
-    * vanes are connected to rachis, not part of. See #1159
-    * Adding stroma syn to mammary connective tissue. Fixes #1151
+    * vanes are connected to rachis, not part of. See [1159](https://github.com/obophenotype/uberon/issues/1159)
+    * Adding stroma syn to mammary connective tissue. Fixes [1151](https://github.com/obophenotype/uberon/issues/1151)
     * merging adrenal into suprarenal. https://github.com/obophenotype/mouse-anatomy-ontology/issues/110
     * Adding syns for outer limiting membrane pending https://github.com/obophenotype/mammalian-phenotype-ontology/issues/2109#issuecomment-141523542
-    * Fixing incorrect syn from FMA. #1176
-    * NT: lower esophagus mucosa layer. Fixes #1177
-    * NT: lower esophagus muscularis layer. Fixes #1176
+    * Fixing incorrect syn from FMA. [1176](https://github.com/obophenotype/uberon/issues/1176)
+    * NT: lower esophagus mucosa layer. Fixes [1177](https://github.com/obophenotype/uberon/issues/1177)
+    * NT: lower esophagus muscularis layer. Fixes [1176](https://github.com/obophenotype/uberon/issues/1176)
     * tweak def of ab ex obl
-    * NTs: L/R adrenal cortex/medulla. Fixes #1170
+    * NTs: L/R adrenal cortex/medulla. Fixes [1170](https://github.com/obophenotype/uberon/issues/1170)
     * NT: Hensen stripe. https://github.com/obophenotype/mammalian-phenotype-ontology/issues/2122
     * Modified relationships for sallet
-    * NT: muscle layer of sigmoid colon. Fixes #1162
+    * NT: muscle layer of sigmoid colon. Fixes [1162](https://github.com/obophenotype/uberon/issues/1162)
     * gastroepiploic arteries
-    * NTs for apical zones of ventricles. Fixes #1169
+    * NTs for apical zones of ventricles. Fixes [1169](https://github.com/obophenotype/uberon/issues/1169)
  * xrefs and metadata
-    * xref fixes from @CatherineLeroy. Fixes #1150
-    * Adding missing NCIt xrefs. Switch to using meaning-free numeric NCIT IDs. Confirmed with Gilberto that this is correct. Fixes #1149
+    * xref fixes from [CatherineLeroy](https://github.com/CatherineLeroy). Fixes [1150](https://github.com/obophenotype/uberon/issues/1150)
+    * Adding missing NCIt xrefs. Switch to using meaning-free numeric NCIT IDs. Confirmed with Gilberto that this is correct. Fixes [1149](https://github.com/obophenotype/uberon/issues/1149)
     * latest EMAPA xrefs
     * IAO xref fixed for example
-    * Corrected wrongly encoded accented characters. Addresses #1173
+    * Corrected wrongly encoded accented characters. Addresses [1173](https://github.com/obophenotype/uberon/issues/1173)
 
 
 ## Original Ontology
