--- a/_posts/2015-11-25-topanat.md
+++ b/_posts/2015-11-25-topanat.md
@@ -5,7 +5,7 @@ title:  "TopAnat: GO-like enrichment of anatomy from expression patterns"
 summary: "Bgee now provides a tool for doing enrichment of gene sets using anatomical expression annotated to Bgee"
 date:   2015-11-25
 categories: announcements
-image: 'http://bgee.unil.ch/img/bgee_logo.png'
+image: 'http://bgee.unil.ch/img/logo/bgee13_logo.png'
 tags:
  - announcement
 ---
