Fixing URL for bgee logo -- @fbastian is this the best stable URL for the logo?

--- a/_posts/2014-12-22-bgeedb.md
+++ b/_posts/2014-12-22-bgeedb.md
@@ -5,7 +5,7 @@ title:  "Bgee release 13, including gene expression calls from 17 species"
 summary: "The new version of Bgee has data from 17 species, all annotated using Uberon anatomical structures"
 date:   2014-12-22
 categories: announcements
-image: 'http://bgee.unil.ch/img/bgee_logo.png'
+image: 'http://bgee.unil.ch/img/logo/bgee13_logo.png'
 tags:
  - announcement
 ---
