--- a/_posts/2016-05-11-release.md
+++ b/_posts/2016-05-11-release.md
@@ -14,19 +14,19 @@ tags:
 
  * Additional neuro terms from Allen atlases and NN added
  * BTO alignment.
- * Fixing PNS syns. removing incorrect neuronames xref. Fixes #1214
- * generalizing def and label of optic canal, fixes #1213. Adding related structures from Hyman. Fixing typo pillar/pilar, see https://github.com/obophenotype/mammalian-phenotype-ontology/issues/2165
+ * Fixing PNS syns. removing incorrect neuronames xref. Fixes [1214](https://github.com/obophenotype/uberon/issues/1214)
+ * generalizing def and label of optic canal, fixes [1213](https://github.com/obophenotype/uberon/issues/1213). Adding related structures from Hyman. Fixing typo pillar/pilar, see https://github.com/obophenotype/mammalian-phenotype-ontology/issues/2165
  * Not classifying echioderm ampulla as tooth-like, as it appears non skeletal https://github.com/BgeeDB/anatomical-similarity-annotations/issues/18
  * fixed def of collagen/cuticulin cuticle
  * obsoleting protein-based cuticle
- * NT: epididymal lumen. Fixes #1209
+ * NT: epididymal lumen. Fixes [1209](https://github.com/obophenotype/uberon/issues/1209)
  * linking tickets to terms
  * Relaxed syn scope of cerebrum for telencephalon to RELATED.
  * Also clarified source of synonyms, added comments.
- * Added an immediately obsoleted concept for Cerebrum denoting the ambiguous concept, with CONSIDER links to alternate more precisely defined concepts. Fixes #1208
- * consistent nomenclature for postcranial, fixes #1205
- * Syns for start of neonate stage, #1204 - also placing process boundary in the upper_level category
- * Added start of neonate stage. Fixes #1204
+ * Added an immediately obsoleted concept for Cerebrum denoting the ambiguous concept, with CONSIDER links to alternate more precisely defined concepts. Fixes [1208](https://github.com/obophenotype/uberon/issues/1208)
+ * consistent nomenclature for postcranial, fixes [1205](https://github.com/obophenotype/uberon/issues/1205)
+ * Syns for start of neonate stage, [1204](https://github.com/obophenotype/uberon/issues/1204) - also placing process boundary in the upper_level category
+ * Added start of neonate stage. Fixes [1204](https://github.com/obophenotype/uberon/issues/1204)
 
 ## Original Ontology
 
