--- a/_posts/2016-08-12-release.md
+++ b/_posts/2016-08-12-release.md
@@ -10,8 +10,8 @@ tags:
  - release
 ---
 
- * Remove bad Brodmann syns from NFSTD. Fixes #1245
- * splitting resp primordium into epithelial and mesenchymal components, see #1246
+ * Remove bad Brodmann syns from NFSTD. Fixes [1245](https://github.com/obophenotype/uberon/issues/1245)
+ * splitting resp primordium into epithelial and mesenchymal components, see [1246](https://github.com/obophenotype/uberon/issues/1246)
  * case fixes for https://github.com/cmungall/capital-offence/issues/1
 
 # Ontology Diff Report
