--- a/_posts/2016-09-07-release.md
+++ b/_posts/2016-09-07-release.md
@@ -10,7 +10,7 @@ tags:
  - release
 ---
 
-This release of uberon has an interesting new class, for the [glymphatic system](http://purl.obolibrary.org/obo/UBERON_0036145). Comments welcome on this ticket: https://github.com/obophenotype/uberon/issues/1260
+This release of uberon has an interesting new class, for the [glymphatic system](http://purl.obolibrary.org/obo/UBERON_0036145). Comments welcome on [this ticket](https://github.com/obophenotype/uberon/issues/1260)
 
 One of the major changes in this release was the 'budding off' of
 uberon to make a new insect module. This is analogous to the module
@@ -19,15 +19,14 @@ skeletal terms, described in:
 
 Haendel, M. a, Balhoff, J. P., Bastian, F. B., Blackburn, D. C., Blake, J. a, Bradford, Y., … Mungall, C. J. (2014). Unification of multi-species vertebrate anatomy ontologies for comparative biology in Uberon. Journal of Biomedical Semantics, 5(1), 21. [doi:10.1186/2041-1480-5-21](http://dx.doit.org/10.1186/2041-1480-5-21)
 
-This means that ontology _editors_ can more easily add insect-specific terms, by editing this module independently. See:https://github.com/obophenotype/insect-anatomy-ontology
+This means that ontology _editors_ can more easily add insect-specific terms, by editing this module independently. See: [obophenotype/insect-anatomy-ontology](https://github.com/obophenotype/insect-anatomy-ontology)
 
 These ontologies are merged at the time of release. So for uberon
 _users_, this results in this release having an additional 235
 insect-specific terms. But note these are filtered out in
 species-specific views, e.g. composite-metazoan.
 
-For more details, see:
-https://github.com/obophenotype/uberon/issues/1262
+For more details, see: [issue 1262](https://github.com/obophenotype/uberon/issues/1262)
 
 
 # Ontology Diff Report
