--- a/_posts/2016-09-07-release.md
+++ b/_posts/2016-09-07-release.md
@@ -3,7 +3,7 @@ comments: true
 layout: post
 title: "2016-09-07 release"
 date: 2016-09-07
-summary: "Added glymphatic system. Better integration insect terms."
+summary: "Added glymphatic system. Created separate insect module."
 categories: release
 image: 'https://upload.wikimedia.org/wikipedia/commons/2/2d/Drosophila.png'
 tags:
