--- a/_posts/2014-02-04-release.md
+++ b/_posts/2014-02-04-release.md
@@ -15,16 +15,16 @@ Stable URL: http://purl.obolibrary.org/obo/uberon/releases/2014-02-04/uberon.owl
 
  * syns for branches of ocm nerve
  * additional metadata relations (function, structure notes).
- * Added terms from invert neuroanat paper. See issue #393
- * various additions relating to harerian gland, see #392
- * added xrefs to AAO for extra-ocular, see issue #394
+ * Added terms from invert neuroanat paper. See issue [393](https://github.com/obophenotype/uberon/issues/393)
+ * various additions relating to harerian gland, see [392](https://github.com/obophenotype/uberon/issues/392)
+ * added xrefs to AAO for extra-ocular, see issue [394](https://github.com/obophenotype/uberon/issues/394)
  * NTs for branches of arteries around the eye
  * NT conjunctival space
  * NTs grouping for glands, based on PMID:7559104
  * NT: infundibulum of gallbladder
  * Fixed name of term brought in from MP
  * New hair types by body location, for MP
- * Added taxon metadata for Harderian gland. Fixes issue #392
+ * Added taxon metadata for Harderian gland. Fixes issue [392](https://github.com/obophenotype/uberon/issues/392)
  * Making blood and analogs a subtype of bodily fluid. Addresses http://code.google.com/p/phenotype-ontologies/issues/detail?id=7
  * NTs for defining CL classes    
 
